fix(options): fix dict title overflows on small screens

--- a/src/options/components/SortableList/_style.scss
+++ b/src/options/components/SortableList/_style.scss
@@ -15,3 +15,7 @@
     }
   }
 }
+
+.sortable-list-item-btns {
+  min-width: fit-content;
+}
